<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mytip.MainActivity" >

    <TextView
        android:id="@+id/billAmountLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="36dp"
        android:text="@string/bill_amount_label" />

    <EditText
        android:id="@+id/billAmountEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/billAmountLabel"
        android:layout_alignBottom="@+id/billAmountLabel"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:text="@string/bill_amount_edit_text" />

    <TextView
        android:id="@+id/precentLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/billAmountLabel"
        android:layout_below="@+id/billAmountEditText"
        android:layout_marginTop="49dp"
        android:text="@string/percent_label" />

    <TextView
        android:id="@+id/percentTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/precentLabel"
        android:layout_centerHorizontal="true"
        android:text="@string/percent_text_view" />

    <TextView
        android:id="@+id/tipLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/precentLabel"
        android:layout_below="@+id/percentDownButton"
        android:layout_marginTop="57dp"
        android:text="@string/tip_label" />

    <TextView
        android:id="@+id/tipTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tipLabel"
        android:layout_alignRight="@+id/percentTextView"
        android:text="@string/tip_text_view" />

    <TextView
        android:id="@+id/totalLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tipLabel"
        android:layout_below="@+id/tipLabel"
        android:layout_marginTop="67dp"
        android:text="@string/total_label" />

    <TextView
        android:id="@+id/totalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/totalLabel"
        android:layout_alignRight="@+id/tipTextView"
        android:text="@string/total_text_view" />

    <Button
        android:id="@+id/percentUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/percentTextView"
        android:layout_alignBottom="@+id/percentTextView"
        android:layout_alignRight="@+id/billAmountEditText"
        android:layout_marginRight="31dp"
        android:text="@string/percent_up_button" />

    <Button
        android:id="@+id/percentDownButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/percentUpButton"
        android:layout_below="@+id/percentUpButton"
        android:text="@string/percent_down_button" />

</RelativeLayout>
